[package]
name = "game-chess-battlegroud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy="0.10.0"
serde = { version = "1.0", features = ["derive"]}
bincode = "1.3.1"
local-ip-address = "0.4.8"
bevy_renet = "0.0.5"
dbg = "1.0.4"
rand = "0.8.5"
